# data-driven-daily

./: README.md  docker-compose.yml  environment.yml  package-lock.json  package.json
apps/api/: Dockerfile  README.md  data_driven_daily.db  pyproject.toml
apps/api/app/: __init__.py  main.py  seed.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: ai.py  articles.py  categories.py  drafts.py  exports.py  feedback.py  newsletters.py  sources.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/jobs/: celery_app.py  tasks.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: ai.py  articles.py  common.py  drafts.py  feedback.py  newsletters.py  sources.py
apps/api/app/services/: deduplication.py  discovery.py  drafts.py  exports.py  feedback.py  ranking.py  recommendations.py  rendering.py
apps/api/app/services/ai/: base.py  openai_provider.py  prompts.py  registry.py
apps/api/app/templates/: newsletter.html.j2  newsletter.mjml.j2
apps/api/data_driven_daily_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_deduplication.py  test_draft_generation.py  test_feedback.py  test_ranking.py  test_rendering.py
apps/web/: Dockerfile  middleware.ts  package.json  tailwind.config.ts
apps/web/.next.bak-20260511-140917/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-shell.tsx  (+7 more)
(+157 files in other folders)
