[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-driven-daily-api"
version = "0.1.0"
description = "Backend for the Data-Driven Daily AI-assisted newsletter platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.40",
  "psycopg[binary]>=3.2.10",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.13.0",
  "openai>=1.109.0",
  "jinja2>=3.1.6",
  "celery>=5.4.0",
  "redis>=6.2.0",
  "feedparser>=6.0.11",
  "langchain>=0.3.25",
  "langchain-openai>=0.3.17",
  "httpx>=0.28.0",
  "PyJWT>=2.10.1",
  "python-multipart>=0.0.20",
  "pgvector>=0.3.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

